--- a/albums.html
+++ b/albums.html
@@ -23,8 +23,8 @@
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
