--- a/albums.html
+++ b/albums.html
@@ -87,7 +87,7 @@
         <div class="ms-section__block" id="here">
           <div class="ms-page-title">
             <h2 class="page-header">Gallery</h2>
-<!--             <p class="page-desc">Assertively synthesize state of the art testing procedures via sticky niches.</p> -->
+            <p class="page-desc">Assertively synthesize state of the art testing procedures via sticky niches.</p>
           </div>
         </div>
         <!-- Page Content -->
