--- a/event2.html
+++ b/event2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   
-<!-- Mirrored from madsparrow.me/emily/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Sep 2019 13:25:46 GMT -->
+<!-- Mirrored from madsparrow.me/emily/blog-single-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Sep 2019 13:26:14 GMT -->
 <head>
     <title>Emily - Creative Photography Portfolio</title>
     <!-- Metadata -->
@@ -86,81 +86,70 @@
         <!-- Page Title -->
         <div class="ms-section__block">
           <div class="ms-page-title">
-            <h2 class="page-header">EVENTS</h2>
-            <p class="page-desc">Progressively create resource maximizing convergence and functional alignments. </p>
+            <h2 class="page-header">Discover fascinating stories</h2>
+            <div class="post-item__date">11/11/2017</div>
           </div>
         </div>
         <!-- Page Content -->
         <div class="ms-section__block">
-          <div id="blog" class="row">
-            <!-- Post Item -->
-            <div class="post-item col-lg-6 col-md-12">
-              <a href="event1.html" data-type="page-transition">
-                <div class="post-item__img">
-                  <img src="assets/images/new/graffiti.jpg" alt="img">
-                </div>
-                <div class="post-item__info">
-                  <h5 class="post-item__title">Graffiti 2019</h5>
-                  <div class="post-item__date">comming soon</div>
-                  <div class="post-item__link">read more</div>
-                </div>
+          <div id="ms-blog-post" class="row">
+            <div class="col-md-8">
+              <img src="assets/images/new/face1.jpg" alt="img"><br>
+              <blockquote>“You don’t need to be a font savant, or be a Creative Cloud wizard, or even have a degree in design in order to be a highly effective product designer.”</blockquote>
+              <p>Effervescence, IIIT Allahabad is association with Dare2Compete and Fine Arts Society, IIIT Allahabad the prime sketching competition of Effervescence’19 - “ SKETCHERS”.
+                Sharpen your pencil, unfold your canvas, and let your imagination roll with magnificence.To the Sketcher within us all.</p>
+              <p>Effervescence, IIIT Allahabad is association with Dare2Compete and Fine Arts Society, IIIT Allahabad the prime sketching competition of Effervescence’19 - “ SKETCHERS”.
+                Sharpen your pencil, unfold your canvas, and let your imagination roll with magnificence.To the Sketcher within us all.</p><br>
+              <div class="ms-section__block center-block align-center">
+                <h6>Share</h6>
+                <ul class="socials share-links">
+                  <li><a href="#" class="socicon-facebook"></a></li>
+                  <li><a href="#" class="socicon-twitter"></a></li>
+                  <li><a href="#" class="socicon-instagram"></a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="ms-right-sidebar col-md-4">
+            <div class="col-md-12"><h5>Event details</h5></div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">9 Ridiculous Rules About photo</h6>
+                <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
-            <!-- Post Item -->
-            <div class="post-item col-lg-6 col-md-12">
-              <a href="event2.html" data-type="page-transition">
-                <div class="post-item__img">
-                  <img src="assets/images/new/sketch.jpg" alt="img">
-                </div>
-                <div class="post-item__info">
-                  <h5 class="post-item__title">Skethers 2019</h5>
-                  <div class="post-item__date">Online Event</div>
-                  <div class="post-item__link">read more</div>
-                </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">What Zombies Can Teach You About photo</h6>
+                <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
-            <!-- Post Item -->
-            <div class="post-item col-lg-6 col-md-12">
-              <a href="event3.html" data-type="page-transition">
-                <div class="post-item__img">
-                  <img src="assets/images/new/face1.jpg" alt="img">
-                </div>
-                <div class="post-item__info">
-                  <h5 class="post-item__title">Face Paintimg 2019</h5>
-                  <div class="post-item__date">comming soon</div>
-                  <div class="post-item__link">read more</div>
-                </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">Don't Just Sit There! Start experiment</h6>
+                <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
-            <!-- Post Item -->
-            <div class="post-item col-lg-6 col-md-12">
-              <a href="event4.html" data-type="page-transition">
-                <div class="post-item__img">
-                  <img src="assets/images/new/craft.jpg" alt="img">
-                </div>
-                <div class="post-item__info">
-                  <h5 class="post-item__title">Craft Arena 2019</h5>
-                  <div class="post-item__date">comming soon</div>
-                  <div class="post-item__link">read more</div>
-                </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">What Can Instagramm Teach You About like</h6>
+                <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
-            <div class="post-item col-lg-6 col-md-12">
-              <a href="event5.html" data-type="page-transition">
-                <div class="post-item__img">
-                  <img src="assets/images/new/face1.jpg" alt="img">
-                </div>
-                <div class="post-item__info">
-                  <h5 class="post-item__title">Tooncon 2019</h5>
-                  <div class="post-item__date">comming soon</div>
-                  <div class="post-item__link">read more</div>
-                </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">Find A Quick Way To love</h6>
+                <div class="post-item__date">11/11/2017</div>
               </a>
+            </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">The Lazy Man's Guide To like</h6>
+                <div class="post-item__date">11/11/2017</div>
+              </a>
+            </div>
+            <div class="col-md-12"><a href="blog.html" data-type="page-transition">View All</a></div>
             </div>
           </div>
-        </div>
-        <div class="ms-section__block center-block">
-          <a href="#" class="ms-button" data-title="load more" data-type="page-transition">load more</a>
         </div>
       </main>
       <!-- Footer -->
@@ -185,5 +174,5 @@
     <script type="text/javascript" src="assets/js/main.js"></script>
   </body>
 
-<!-- Mirrored from madsparrow.me/emily/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Sep 2019 13:26:05 GMT -->
+<!-- Mirrored from madsparrow.me/emily/blog-single-page.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 02 Sep 2019 13:26:15 GMT -->
 </html>
