--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -97,11 +99,11 @@
             <div class="post-item col-lg-6 col-md-12">
               <a href="event1.html" data-type="page-transition">
                 <div class="post-item__img">
-                  <img src="assets/images/new/graffiti.jpg" alt="img">
+                  <img src="assets/images/new/sketch.jpg" alt="img">
                 </div>
                 <div class="post-item__info">
-                  <h5 class="post-item__title">Graffiti 2019</h5>
-                  <div class="post-item__date">comming soon</div>
+                  <h5 class="post-item__title">Skethers 2019</h5>
+                  <div class="post-item__date">online event</div>
                   <div class="post-item__link">read more</div>
                 </div>
               </a>
@@ -110,11 +112,11 @@
             <div class="post-item col-lg-6 col-md-12">
               <a href="event2.html" data-type="page-transition">
                 <div class="post-item__img">
-                  <img src="assets/images/new/sketch.jpg" alt="img">
+                  <img src="assets/images/new/graffiti.jpg" alt="img">
                 </div>
                 <div class="post-item__info">
-                  <h5 class="post-item__title">Skethers 2019</h5>
-                  <div class="post-item__date">Online Event</div>
+                  <h5 class="post-item__title">GRAFFITI 2019</h5>
+                  <div class="post-item__date">coming soon</div>
                   <div class="post-item__link">read more</div>
                 </div>
               </a>
@@ -123,11 +125,11 @@
             <div class="post-item col-lg-6 col-md-12">
               <a href="event3.html" data-type="page-transition">
                 <div class="post-item__img">
-                  <img src="assets/images/new/face1.jpg" alt="img">
+                  <img src="assets/images/new/craft.jpg" alt="img">
                 </div>
                 <div class="post-item__info">
-                  <h5 class="post-item__title">Face Paintimg 2019</h5>
-                  <div class="post-item__date">comming soon</div>
+                  <h5 class="post-item__title">CRAFTARENA 2019</h5>
+                  <div class="post-item__date">coming soon (new event)</div>
                   <div class="post-item__link">read more</div>
                 </div>
               </a>
@@ -136,11 +138,11 @@
             <div class="post-item col-lg-6 col-md-12">
               <a href="event4.html" data-type="page-transition">
                 <div class="post-item__img">
-                  <img src="assets/images/new/craft.jpg" alt="img">
+                  <img src="assets/images/new/face1.jpg" alt="img">
                 </div>
                 <div class="post-item__info">
-                  <h5 class="post-item__title">Craft Arena 2019</h5>
-                  <div class="post-item__date">comming soon</div>
+                  <h5 class="post-item__title">FACE PAINTING 2019</h5>
+                  <div class="post-item__date">coming soon</div>
                   <div class="post-item__link">read more</div>
                 </div>
               </a>
@@ -152,7 +154,7 @@
                 </div>
                 <div class="post-item__info">
                   <h5 class="post-item__title">Tooncon 2019</h5>
-                  <div class="post-item__date">comming soon</div>
+                  <div class="post-item__date">coming soon</div>
                   <div class="post-item__link">read more</div>
                 </div>
               </a>
