--- a/event1.html
+++ b/event1.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -23,8 +25,8 @@
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -86,15 +88,15 @@
         <!-- Page Title -->
         <div class="ms-section__block">
           <div class="ms-page-title">
-            <h2 class="page-header">Discover fascinating stories</h2>
-            <div class="post-item__date">11/11/2017</div>
+            <h2 class="page-header">SKETCHERS</h2>
+            <div class="post-item__date"></div>
           </div>
         </div>
         <!-- Page Content -->
         <div class="ms-section__block">
           <div id="ms-blog-post" class="row">
             <div class="col-md-8">
-              <img src="assets/images/new/graffiti.jpg" alt="img"><br>
+              <img src="assets/images/new/sketch.jpg" alt="img"><br>
               <blockquote>“You don’t need to be a font savant, or be a Creative Cloud wizard, or even have a degree in design in order to be a highly effective product designer.”</blockquote>
               <p>Effervescence, IIIT Allahabad is association with Dare2Compete and Fine Arts Society, IIIT Allahabad the prime sketching competition of Effervescence’19 - “ SKETCHERS”.
                 Sharpen your pencil, unfold your canvas, and let your imagination roll with magnificence.To the Sketcher within us all.</p>
@@ -103,48 +105,66 @@
               <div class="ms-section__block center-block align-center">
                 <h6>Share</h6>
                 <ul class="socials share-links">
-                  <li><a href="#" class="socicon-facebook"></a></li>
-                  <li><a href="#" class="socicon-twitter"></a></li>
-                  <li><a href="#" class="socicon-instagram"></a></li>
+                  <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+                  <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+                  <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
                 </ul>
               </div>
             </div>
             <div class="ms-right-sidebar col-md-4">
-            <div class="col-md-12"><h5>Event details</h5></div>
+            <div class="col-md-12"><h5>Event Rules</h5></div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">9 Ridiculous Rules About photo</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title">The sketch can be drawn on any size paper with only a pen, pencils and/or pencil colors. Comic strips will involve proper box formatting and direction of progress. The character shapes must be consistent throughout the comic. </h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Zombies Can Teach You About photo</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title">The entries will be featured on Fine Arts Society, IIIT Allahabad facebook page and the winners will be decided based on the following criteria: <br><strong> Likes: 1 like = 1 point; Shares: 1 share = 2 points.</strong> </h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Don't Just Sit There! Start experiment</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title"> In the case of any discrepancy or cheating the participant would be disqualified. Also, multiple shares from a single ID will be counted as one. </h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Can Instagramm Teach You About like</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title">The participants/winners should be ready with the original sketch when asked upon by the Organizers. </h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Find A Quick Way To love</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title">Send your entries to nirmiti@iiita.ac.in including the Name, College, Contact No. and Caption</h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">The Lazy Man's Guide To like</h6>
-                <div class="post-item__date">11/11/2017</div>
+                <h6 class="post-item__title">Entries will only be accepted as soon as the participants follow the page of the organizing society at ​Fine Arts Society, IIIT Allahabad​ ​and at https://www.instagram.com/nirmiti_iiita</h6>
+                <div class="post-item__date"></div>
+              </a>
+            </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">The photographs submitted by all the participants will be uploaded on this page Fine Arts Society, IIIT Allahabad . </h6>
+                <div class="post-item__date"></div>
+              </a>
+            </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">The last date for submission is 10th October 2019. </h6>
+                <div class="post-item__date"></div>
+              </a>
+            </div>
+            <div class="col-md-12">
+              <a href="blog-single-page.html" data-type="page-transition">
+                <h6 class="post-item__title">The final result will be announced on 19th October 2019. </h6>
+                <div class="post-item__date"></div>
               </a>
             </div>
             <div class="col-md-12"><a href="blog.html" data-type="page-transition">View All</a></div>
@@ -157,10 +177,10 @@
         <div class="ms-footer">
           <div class="copyright">Copyright © 2017. Design by MadSparrow</div>
           <ul class="socials">
-            <li><a href="#" class="socicon-facebook"></a></li>
-            <li><a href="#" class="socicon-twitter"></a></li>
-            <li><a href="#" class="socicon-instagram"></a></li>
-            <li><a href="#" class="socicon-youtube"></a></li>
+            <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+            <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+            <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
+            <li><a href="#" class="socicon-youtube fa fa-youtube"></a></li>
           </ul>
         </div>
       </footer>
