--- a/event3.html
+++ b/event3.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -23,8 +25,8 @@
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -86,15 +88,15 @@
         <!-- Page Title -->
         <div class="ms-section__block">
           <div class="ms-page-title">
-            <h2 class="page-header">Discover fascinating stories</h2>
-            <div class="post-item__date">11/11/2017</div>
+            <h2 class="page-header">CRAFTARENA</h2>
+            <div class="post-item__date"></div>
           </div>
         </div>
         <!-- Page Content -->
         <div class="ms-section__block">
           <div id="ms-blog-post" class="row">
             <div class="col-md-8">
-              <img src="assets/images/new/face1.jpg" alt="img"><br>
+              <img src="assets/images/new/craft.jpg" alt="img"><br>
               <blockquote>“You don’t need to be a font savant, or be a Creative Cloud wizard, or even have a degree in design in order to be a highly effective product designer.”</blockquote>
               <p>Effervescence, IIIT Allahabad is association with Dare2Compete and Fine Arts Society, IIIT Allahabad the prime sketching competition of Effervescence’19 - “ SKETCHERS”.
                 Sharpen your pencil, unfold your canvas, and let your imagination roll with magnificence.To the Sketcher within us all.</p>
@@ -103,9 +105,9 @@
               <div class="ms-section__block center-block align-center">
                 <h6>Share</h6>
                 <ul class="socials share-links">
-                  <li><a href="#" class="socicon-facebook"></a></li>
-                  <li><a href="#" class="socicon-twitter"></a></li>
-                  <li><a href="#" class="socicon-instagram"></a></li>
+                  <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+                  <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+                  <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
                 </ul>
               </div>
             </div>
@@ -113,37 +115,37 @@
             <div class="col-md-12"><h5>Event details</h5></div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">9 Ridiculous Rules About photo</h6>
+                <h6 class="post-item__title"> The participants are required to make attractive craftworks using the materials provided during the event</h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Zombies Can Teach You About photo</h6>
+                <h6 class="post-item__title">Registration can be done either solo or in a group of two members</h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Don't Just Sit There! Start experiment</h6>
+                <h6 class="post-item__title"> Entry fee is ​Rs. 60 for single and Rs. 40 for each of the two​ members. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Can Instagramm Teach You About like</h6>
+                <h6 class="post-item__title"> All the materials required will be provided on the spot. Still if someone brings his/ her own materials which he/she finds useful for their crafts, its allowed.</h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Find A Quick Way To love</h6>
+                <h6 class="post-item__title">No readymade works​ will be accepted. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">The Lazy Man's Guide To like</h6>
+                <h6 class="post-item__title">Results will be declared soon after the event’s completion. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
