--- a/event4.html
+++ b/event4.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -23,8 +25,8 @@
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -86,8 +88,8 @@
         <!-- Page Title -->
         <div class="ms-section__block">
           <div class="ms-page-title">
-            <h2 class="page-header">Discover fascinating stories</h2>
-            <div class="post-item__date">11/11/2017</div>
+            <h2 class="page-header">FACE PAINTING</h2>
+            <div class="post-item__date"></div>
           </div>
         </div>
         <!-- Page Content -->
@@ -103,9 +105,9 @@
               <div class="ms-section__block center-block align-center">
                 <h6>Share</h6>
                 <ul class="socials share-links">
-                  <li><a href="#" class="socicon-facebook"></a></li>
-                  <li><a href="#" class="socicon-twitter"></a></li>
-                  <li><a href="#" class="socicon-instagram"></a></li>
+                  <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+                  <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+                  <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
                 </ul>
               </div>
             </div>
@@ -113,40 +115,40 @@
             <div class="col-md-12"><h5>Event details</h5></div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">9 Ridiculous Rules About photo</h6>
+                <h6 class="post-item__title">Registration can be done as a ​group of 2 members​: one, the painter and the other whose face is supposed to be painted. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Zombies Can Teach You About photo</h6>
+                <h6 class="post-item__title">All the materials required (brushes, poster colours) will be provided on the spot. Only​ Poster colours ​are to be used </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Don't Just Sit There! Start experiment</h6>
+                <h6 class="post-item__title">The participants are allowed to use mobile phones for ideas. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Can Instagramm Teach You About like</h6>
+                <h6 class="post-item__title">Results will be declared soon after the event’s completion. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Find A Quick Way To love</h6>
+                <h6 class="post-item__title"> Winners will be decided by the organisers based on the best face painted, and contacted through mail or whatever mode of contact the participants prefer to. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
-            <div class="col-md-12">
+            <!-- <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
                 <h6 class="post-item__title">The Lazy Man's Guide To like</h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
-            </div>
+            </div> -->
             <div class="col-md-12"><a href="blog.html" data-type="page-transition">View All</a></div>
             </div>
           </div>
