--- a/event5.html
+++ b/event5.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="assets/css/plugins.min.css">
     <!-- Custom CSS File -->
     <link rel="stylesheet" href="assets/css/style.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <div class="ms-main-container">
@@ -23,8 +25,8 @@
         <nav class="ms-nav">
           <div class="ms-logo">
             <a href="index.html" data-type="page-transition">
-              <div class="logo-dark current"><img src="logo-dark.svg" alt="logo image"></div>
-              <div class="logo-light"><img src="logo-light.svg" alt="logo image"></div>
+              <div class="logo-dark current"><img src="nblack.svg" alt="logo image"></div>
+              <div class="logo-light"><img src="nwhite.svg" alt="logo image"></div>
             </a>
           </div>
           <button class="hamburger" type="button" data-toggle="navigation">
@@ -103,9 +105,9 @@
               <div class="ms-section__block center-block align-center">
                 <h6>Share</h6>
                 <ul class="socials share-links">
-                  <li><a href="#" class="socicon-facebook"></a></li>
-                  <li><a href="#" class="socicon-twitter"></a></li>
-                  <li><a href="#" class="socicon-instagram"></a></li>
+                  <li><a href="#" class="socicon-facebook fa fa-facebook"></a></li>
+                  <li><a href="#" class="socicon-twitter fa fa-twitter"></a></li>
+                  <li><a href="#" class="socicon-instagram fa fa-instagram"></a></li>
                 </ul>
               </div>
             </div>
@@ -113,37 +115,37 @@
             <div class="col-md-12"><h5>Event details</h5></div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">9 Ridiculous Rules About photo</h6>
+                <h6 class="post-item__title">Anybody can show some skills of making cartoon figures that you may find around you or have in your memories, </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Zombies Can Teach You About photo</h6>
+                <h6 class="post-item__title">Solo entries are to be made.​ NO THEME CONSTRAINT​. Entry fee is​ Rs.30 per person. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Don't Just Sit There! Start experiment</h6>
+                <h6 class="post-item__title">Since just sketching is required, the stationery items needed (pencils, erasers, sharpeners) will be provided on the spot. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">What Can Instagramm Teach You About like</h6>
+                <h6 class="post-item__title">The participants are allowed to use mobile phones for ideas. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">Find A Quick Way To love</h6>
+                <h6 class="post-item__title">Results will be declared soon after the event’s completion. </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
             <div class="col-md-12">
               <a href="blog-single-page.html" data-type="page-transition">
-                <h6 class="post-item__title">The Lazy Man's Guide To like</h6>
+                <h6 class="post-item__title"> Winners will be decided by the organisers based on the best work, and contacted through mail </h6>
                 <div class="post-item__date">11/11/2017</div>
               </a>
             </div>
